<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context="cn.keiss.where2pee.activity.RegisterActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_register_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_register_nickname"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/layout_check_code_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_register_username"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_check_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/check_code" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register_get_check_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0.3"
            android:text="@string/get_check_code" />
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_check_code_box"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register_exec_register"
        android:layout_below="@+id/til_register_password"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
