<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.keiss.where2pee.activity.MainActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/layout_filter_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <Button
            android:id="@+id/btn_main_filter_distance"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/distance"/>
        <Button
            android:id="@+id/btn_main_filter_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/filter"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_main_filter_sort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sort"/>
    </LinearLayout>

    <include layout="@layout/view_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_filter_bar"/>

   <cn.keiss.where2pee.view.BaseRecyclerView
       android:id="@+id/rv_toilet_list"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_below="@+id/layout_filter_bar">

   </cn.keiss.where2pee.view.BaseRecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_new_toilet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_add_white_24dp"/>
</RelativeLayout>
